<resources>
    <string name="space">&#160;</string>
    <string name="app_name">Earthquake Feed</string>
    <string name="mag_content_desc">Colored circle representing magnitude.</string>
    <string name="ads_test_key">ca-app-pub-3940256099942544~3347511713</string>
    <!--Tabs for view pager-->
    <string name="recent_tab">Recent</string>
    <string name="saved_tab">Saved</string>

    <!--Detail Titles-->
    <string name="mag_title">Magnitude</string>
    <string name="felt_by_title">Felt By</string>
    <string name="location_title">Lat, Long</string>
    <string name="depth_title">Depth</string>
    <string name="mmi_title">Intensity</string>
    <string name="time_title">Time</string>
    <string name="title_activity_maps">Map</string>

    <!--Preferences-->
    <!--Notifications-->
    <string name="notif">wat.seth.dev.capstone.notif</string>
    <string name="notif_title">Notification Settings</string>

    <string name="notif_toggle">notif_toggle</string>
    <string name="notif_toggle_tittle">Notifications</string>
    <string name="notif_toggle_summary">Select to enable notifications.</string>
    <string name="notif_toggle_default_value">f</string>

    <string name="notif_location">notif_location</string>
    <string name="notif_location_title">Location</string>
    <string name="notif_location_summary">Select a location to receive notifications for earthquakes.</string>
    <string name="notif_location_default_value">118, 119</string>

    <string name="notif_range">wat.seth.dev.capstone.notif_range</string>
    <string name="notif_range_title">Range</string>
    <string name="notif_range_summary">How many miles around selected location to search within.</string>
    <string name="notif_range_default_value">10</string>

    <string name="notif_min_mag">notif_min_mag</string>
    <string name="notif_min_mag_title">Magnitude</string>
    <string name="notif_min_mag_summary">Only send alerts for earthquakes equal or greater than this magnitude.</string>
    <string name="notif_min_mag_default_value">5.0</string>

    <string name="notif_interval">notif_interval</string>
    <string name="notif_interval_title">Interval</string>
    <string name="notif_interval_summary">Time in minutes to wait between check of earth quake occurrences.</string>

    <!--General Search-->
    <string name="search">search</string>
    <string name="search_title">Search Settings</string>

    <string name="search_min_mag">search_min_mag</string>
    <string name="search_min_mag_title">Min Magnitude</string>
    <string name="search_min_mag_summary">Only show results above this magnitude.</string>
    <string name="search_min_mag_default_value">0</string>

    <string name="search_max_mag">search_max_mag</string>
    <string name="search_max_mag_title">Max Magnitude</string>
    <string name="search_max_mag_summary">Show no results with a magnitude greater than this value.</string>
    <string name="search_max_mag_default_value">10.0</string>

    <string name="search_start_date">search_start_date</string>
    <string name="search_start_date_title">Start Date</string>
    <string name="search_start_date_summary">Only show earthquakes occurring on or after this date.</string>
    <string name="search_start_date_default_value"></string>


    <string name="search_end_date">search_end_date</string>
    <string name="search_end_date_title">End Date</string>
    <string name="search_end_date_summary">Only show earthquakes occurring on or before this date</string>
    <string name="search_end_date_default_value"></string>

    <string name="search_location">search_location</string>
    <string name="search_location_title">Location</string>
    <string name="search_location_summary">Maps will default the starting position to this location.</string>

    <string name="search_range">search_range</string>
    <string name="search_range_title">Range</string>
    <string name="search_range_summary">Only show results within this range from the selected location.</string>

    <string name="search_max_results">search_max_results</string>
    <string name="search_max_results_title">Max Results</string>
    <string name="search_max_results_summary">Maximum number of results to load at one time.</string>
    <string name="search_max_results_default_value">25</string>

    <string name="search_order_by">search_order_by</string>
    <string name="search_order_by_title">Order By</string>
    <string name="search_order_by_summary">Order results by date or magnitude</string>
    <string name="search_order_by_default_value">time</string>

    <string name="search_sort_by">search_descending</string>
    <string name="search_sort_by_title">Sort By</string>
    <string name="search_sort_by_summary">Switch between sorting results ascending, lowest to highest; or
     descending, highest to lowest.</string>
    <string name="search_sort_by_default_value"></string>


    <string name="range_exact">Exact Location</string>
    <string name="range_50">50 miles</string>
    <string name="range_100">100 miles</string>
    <string name="range_150">150 miles</string>
    <string name="range_200">200 miles</string>
    <string name="range_250">250 miles</string>
    <string name="range_500">500 miles</string>
    <string name="range_1000">1000 miles</string>

    <string name="mag_suffix">mag</string>
    <string name="range_suffix_imperial">mi</string>
    <string name="range_suffix_metric">km</string>

    <!--query params-->
    <string name="end_time">endtime</string>
    <string name="start_time">starttime</string>
    <string name="max_mag">maxmagnitude</string>
    <string name="min_mag">minmagnitude</string>
    <string name="order_by">orderby</string>
    <string name="max_results">limit</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <!--error view-->
    <string name="failed_to_load">Failed to load earthquakes.</string>
    <string name="no_saved">You have no saved earthquakes.</string>
    <!--content description-->
    <string name="cd_main_fab">More options</string>
    <string name="cd_twitter">Twitter share</string>
    <string name="cd_bookmark">Bookmark</string>
    <string name="cd_search">Google search</string>
    <string name="cd_increase_min_mag">Increase minimum magnitude</string>
    <string name="cd_decrease_min_mag">Decrease minimum magnitude</string>
    <string name="cd_increase_max_mag">Increase maximum magnitude</string>
    <string name="cd_decrease_max_mag">Decrease maximum magnitude</string>
    <string name="cd_start_date">Start date</string>
    <string name="cd_end_date">End date</string>
    <string name="cd_increase_max_results">Increase maximum results</string>
    <string name="cd_decrease_max_results">Decrease maximum results</string>
    <string name="cd_sort_by">Sort by</string>
    <string name="cd_order_by">Order by</string>
    <string name="cd_retry">Retry</string>
    <string name="cd_world_map">World Map</string>
    <string name="cd_settings">Settings</string>
    <!--toolbars-->
    <string name="tb_world_map">World Map</string>
    <string name="tb_settings">Search Settings</string>
    <!--widget-->
    <string name="widget_title">Today\'s Largest Earthquake</string>
    <!--twitter-->
    <string name="twitter_share">earthquake near</string>
    <!--List-->
    <string name="retry_button">Try again</string>
    <!--menu-->
    <string name="options_title">options</string>
    <!--display view-->
    <string name="desc">descending</string>
    <string name="asc">ascending</string>
    <string name="date_display">date</string>
    <!--earthquake-->
    <string name="mmi_suffix">mmi</string>
    <string name="km_suffix">km</string>
    <string name="miles_suffix">mi</string>
    <string name="miles">miles</string>
</resources>
