<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/notif"
        android:title="@string/notif_title">
        <CheckBoxPreference
            android:defaultValue="@string/notif_toggle_default_value"
            android:key="@string/notif_toggle"
            android:summary="@string/notif_toggle_summary"
            android:title="@string/notif_toggle_tittle" />
        <EditTextPreference
            android:defaultValue="@string/notif_location_default_value"
            android:key="@string/notif_location"
            android:summary="@string/notif_location_summary"
            android:title="@string/notif_location_title" />
        <EditTextPreference
            android:defaultValue="@string/notif_range_default_value"
            android:key="@string/notif_range"
            android:summary="@string/notif_range_summary"
            android:title="@string/notif_range_title" />
        <EditTextPreference
            android:defaultValue="@string/notif_min_mag_default_value"
            android:key="@string/notif_min_mag"
            android:summary="@string/notif_min_mag_summary"
            android:title="@string/notif_min_mag_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/search"
        android:title="@string/search_title">
        <EditTextPreference
            android:defaultValue="@string/search_min_mag_default_value"
            android:key="@string/search_min_mag"
            android:summary="@string/search_min_mag_summary"
            android:title="@string/search_min_mag_title" />
        <EditTextPreference
            android:defaultValue="@string/search_max_mag_default_value"
            android:key="@string/search_max_mag"
            android:summary="@string/search_max_mag_summary"
            android:title="@string/search_max_mag_title" />
        <EditTextPreference
            android:key="@string/search_start_date"
            android:summary="@string/search_start_date_summary"
            android:title="@string/search_start_date_title" />
        <EditTextPreference
            android:key="@string/search_end_date"
            android:summary="@string/search_end_date_summary"
            android:title="@string/search_end_date_title" />
        <!--<EditTextPreference-->
        <!--android:key="@string/search_location"-->
        <!--android:summary="@string/search_location_summary"-->
        <!--android:title="@string/search_location_title" />-->
        <!--<EditTextPreference-->
        <!--android:key="@string/search_range"-->
        <!--android:summary="@string/search_range_summary"-->
        <!--android:title="@string/search_range_title" />-->
        <EditTextPreference
            android:defaultValue="@string/search_max_results_default_value"
            android:key="@string/search_max_results"
            android:summary="@string/search_max_results_summary"
            android:title="@string/search_max_results_title" />
        <EditTextPreference
            android:defaultValue="@string/search_order_by_default_value"
            android:key="@string/search_order_by"
            android:summary="@string/search_order_by_summary"
            android:title="@string/search_order_by_title" />
        <EditTextPreference
            android:defaultValue="@string/search_sort_by_default_value"
            android:key="@string/search_sort_by"
            android:summary="@string/search_sort_by_summary"
            android:title="@string/search_sort_by_title" />
    </PreferenceCategory>
</PreferenceScreen>