<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLight">

    <android.support.v7.widget.CardView
        android:id="@+id/notification_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/notification_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:text="Notification Settings"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/first_notif_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/notif_toggle_switch"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notif_toggle_switch">

                <TextView
                    android:id="@+id/notif_title_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Notifications"
                    android:theme="@style/SettingTitleText" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/first_notif_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/SettingValueContainer"
                app:layout_constraintLeft_toLeftOf="@id/first_notif_title"
                app:layout_constraintTop_toBottomOf="@id/notif_toggle_switch">

                <TextView
                    android:id="@+id/notif_desc_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notif_toggle_summary"
                    android:theme="@style/SettingValueText" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/second_notif_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/location_button"
                app:layout_constraintLeft_toLeftOf="@id/first_notif_title"
                app:layout_constraintTop_toBottomOf="@id/location_button">

                <TextView
                    android:id="@+id/notif_title_loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location"
                    android:theme="@style/SettingTitleText" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/second_notif_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/SettingValueContainer"
                app:layout_constraintLeft_toLeftOf="@id/second_notif_title"
                app:layout_constraintTop_toBottomOf="@id/location_button">

                <TextView
                    android:id="@+id/notif_desc_loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notif_location_summary"
                    android:theme="@style/SettingValueText" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/third_notif_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/range_value_text_view"
                app:layout_constraintLeft_toLeftOf="@id/second_notif_title"
                app:layout_constraintTop_toBottomOf="@id/range_value_text_view">

                <TextView
                    android:id="@+id/notif_title_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Range"
                    android:theme="@style/SettingTitleText" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/third_notif_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/SettingValueContainer"
                app:layout_constraintLeft_toLeftOf="@id/third_notif_title"
                app:layout_constraintTop_toBottomOf="@id/range_down_button">

                <TextView

                    android:id="@+id/notif_desc_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notif_range_summary"
                    android:theme="@style/SettingValueText" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fourth_notif_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/mag_value_text_view"
                app:layout_constraintLeft_toLeftOf="@id/third_notif_title"
                app:layout_constraintTop_toBottomOf="@id/mag_value_text_view">

                <TextView
                    android:id="@+id/notif_title_mag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Magnitude"
                    android:theme="@style/SettingTitleText" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fourth_notif_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/SettingValueContainer"
                app:layout_constraintLeft_toLeftOf="@id/fourth_notif_title"
                app:layout_constraintTop_toBottomOf="@id/mag_value_text_view">

                <TextView
                    android:id="@+id/notif_desc_mag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notif_min_mag_summary"
                    android:theme="@style/SettingValueText" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/notif_divider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent" />

            <!--Notifications ON/OFF-->
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/notif_toggle_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notification_title" />

            <!--Location-->
            <ImageView
                android:id="@+id/location_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_location_on_black_24dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_notif_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="112 31st Ave ..."
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/location_button"
                app:layout_constraintLeft_toRightOf="@id/notif_divider"
                app:layout_constraintTop_toBottomOf="@id/location_button" />

            NotifRangeange-->
            <TextView
                android:id="@+id/range_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/notif_divider"
                app:layout_constraintTop_toBottomOf="@id/second_notif_desc" />

            <TextView
                android:id="@+id/range_title_suffix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="mi"
                app:layout_constraintBottom_toBottomOf="@id/range_value_text_view"
                app:layout_constraintLeft_toRightOf="@id/range_value_text_view" />

            <Button
                android:id="@+id/range_up_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="4dp"
                android:background="@drawable/ic_add_circle_black_24dp"
                app:layout_constraintBottom_toTopOf="@id/range_value_text_view"
                app:layout_constraintRight_toLeftOf="@id/range_down_button"
                app:layout_constraintTop_toBottomOf="@id/range_value_text_view" />

            <Button
                android:id="@+id/range_down_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_remove_circle_black_24dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/range_up_button" />

            NotifMag-Mag-->
            <TextView
                android:id="@+id/mag_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minEms="2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/notif_divider"
                app:layout_constraintTop_toBottomOf="@id/third_notif_desc" />

            <TextView
                android:id="@+id/mag_title_suffix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="mag"
                app:layout_constraintBottom_toBottomOf="@id/mag_value_text_view"
                app:layout_constraintLeft_toRightOf="@id/mag_value_text_view" />

            <Button
                android:id="@+id/mag_up_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="4dp"
                android:background="@drawable/ic_add_circle_black_24dp"
                app:layout_constraintBottom_toTopOf="@id/mag_value_text_view"
                app:layout_constraintRight_toLeftOf="@id/mag_down_button"
                app:layout_constraintTop_toBottomOf="@id/mag_value_text_view" />

            <Button
                android:id="@+id/mag_down_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_remove_circle_black_24dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/mag_up_button" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
    >

    <android.support.v7.widget.CardView
        android:id="@+id/search_cotainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_container">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/search_divider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent" />

            <TextView
                android:id="@+id/search_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:text="Search Settings"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!---->
            <TextView
                android:id="@+id/min_mag_search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_min_mag_title"
                android:theme="@style/SettingTitleText"
                app:layout_constraintBottom_toTopOf="@id/min_mag_up_search_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/min_mag_up_search_button" />

            <TextView
                android:id="@+id/min_mag_search_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="32dp"
                android:text="@string/search_min_mag_summary"
                android:theme="@style/SettingValueContainer"
                app:layout_constraintLeft_toLeftOf="@id/min_mag_search_title"
                app:layout_constraintTop_toBottomOf="@id/min_mag_up_search_button" />

            <TextView
                android:id="@+id/min_mag_search_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:minEms="2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/search_divider"
                app:layout_constraintTop_toBottomOf="@id/search_title" />


            <TextView
                android:id="@+id/min_mag_search_suffix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="mag"
                app:layout_constraintBottom_toBottomOf="@id/min_mag_search_value"
                app:layout_constraintLeft_toRightOf="@id/min_mag_search_value" />

            <Button
                android:id="@+id/min_mag_up_search_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="4dp"
                android:background="@drawable/ic_add_circle_black_24dp"
                app:layout_constraintBottom_toTopOf="@id/min_mag_search_value"
                app:layout_constraintRight_toLeftOf="@id/min_mag_down_search_button"
                app:layout_constraintTop_toBottomOf="@id/min_mag_search_value" />


            <Button
                android:id="@+id/min_mag_down_search_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_remove_circle_black_24dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/min_mag_up_search_button" />
            <!---->
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>